# ala

./: .eslintrc.js  .gitignore  .npmignore  .prettierignore  AGENTS.md  CHANGELOG.md  DEVELOPMENT.md  FEATURES.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  README.md  UI_GUIDE.md  docker-compose.yml  package-lock.json  package.json  skills-lock.json  tailwind.config.js  test-generic-log.txt  tsconfig.json  tsconfig.test.json  webpack.config.js
.agents/skills/antd/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: bump-version.yml  ci.yml  release.yml
.husky/: pre-commit
assets/: ICON.md  SCREENSHOT.md
assets/icons/: icon.icns
backend/: .env.example  Dockerfile  ala.spec  ala_server.py  pyproject.toml
backend/src/ala/: __init__.py  config.py  logging_config.py  main.py
backend/src/ala/api/: __init__.py  chat.py  config.py  health.py  logs.py  projects.py  trace.py
backend/src/ala/mcp/: __init__.py  server.py
backend/src/ala/services/: __init__.py  agent_tools.py  ai_service.py  code_scanner.py  log_analyzer.py  project_manager.py  session_manager.py  trace_analyzer.py
backend/tests/: test_code_scanner.py  test_lazy_log.py  test_log_analyzer.py  test_trace_analyzer.py
docs/: architecture-lazy-log.md  requirements-lazy-log.md  review-lazy-log.md  test-report-lazy-log.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: chat.ts  client.ts  config.ts  logs.ts  projects.ts  trace.ts
frontend/src/components/: AiPanel.tsx  AppSider.tsx  DirectoryFilePicker.tsx  FileUpload.tsx  Header.tsx  LogViewer.tsx  ModelManager.tsx  ProjectManager.tsx  SettingsModal.tsx  TraceViewer.tsx
frontend/src/hooks/: useLogStream.ts
frontend/src/i18n/: config.ts
frontend/src/types/: index.ts
frontend/src/utils/: filters.ts  models.ts
scripts/: ala.ps1  ala.sh  build-exe.sh  generate-icon.js
skills/: antd  browser-preview
src/: main.js  main.ts  preload.ts
src/backend/: ai-prompts.ts  ai-service.ts  aiService.js  log-analyzer.js  log-analyzer.ts  logAnalyzer.js
src/renderer/: App.tsx  index-template.html  index.html  index.tsx  input.css  renderer.js  styles.css  tsconfig.json  types.ts
test/: test-backend.js  test-backend.ts  test-multiformat.ts
(+15 files in other folders)
