[tool.poetry]
name = "ala-backend"
version = "1.1.0"
description = "ALA Backend - Android Log Analyzer Python backend"
authors = ["Jingsong Gao <gao.jingsong@gmail.com>"]
readme = "../README.md"
packages = [{ include = "ala", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.115.0"
uvicorn = { version = ">=0.32.0", extras = ["standard"] }
python-multipart = ">=0.0.12"
fastmcp = ">=2.0.0"
pydantic = ">=2.9.0"
pydantic-settings = ">=2.6.0"
sse-starlette = ">=2.1.3"
python-dotenv = ">=1.0.0"
httpx = ">=0.27.0"
perfetto = ">=0.16.0"
anthropic = "^0.96.0"
openai = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0"
pytest-asyncio = ">=0.24.0"
httpx = ">=0.27.0"
ruff = ">=0.8.0"
pyinstaller = {version = ">=6.0", python = ">=3.12,<3.14"}
pyinstaller-hooks-contrib = {version = ">=2024.0", python = ">=3.12,<3.14"}

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ala"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
